Fixed timer responsiveness on mobile devices

--- a/public/css/countdown.css
+++ b/public/css/countdown.css
@@ -90,11 +90,13 @@
 
 .rect .timer-monster-top {
     /*font-size: 50px;*/
-    font-size: 40px;
+    /*font-size: 40px;*/
+    font-size: 30px;
 }
 
 .rect .timer-monster-bottom {
-    font-size: 16px;
+    /*font-size: 16px;*/
+    font-size: 14px;
 }
 
 @media  only screen and (min-width : 360px) {
